# arkoi_language

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  NEXT_STEPS.md  README.md  ROADMAP.md
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml
example/cc/: cc.ark  cc.dot  cc.il  cc.s
example/factorial/: factorial.ark  factorial.dot  factorial.il  factorial.s
example/fibonacci/: fibonacci.ark  fibonacci.dot  fibonacci.il  fibonacci.s
example/hello_world/: hello_world.dot  hello_world.il  hello_world.s
example/test/: test.ark  test.dot  test.il  test.s
include/argparse/: argparse.hpp
include/arkoi_language/ast/: ast_printer.hpp  nodes.hpp  visitor.hpp
include/arkoi_language/front/: parser.hpp  scanner.hpp  token.hpp
include/arkoi_language/il/: analyses.hpp  cfg.hpp  cfg_printer.hpp  dataflow.hpp  generator.hpp  il_printer.hpp  instruction.hpp  operand.hpp  ssa.hpp  visitor.hpp
include/arkoi_language/opt/: constant_folding.hpp  constant_propagation.hpp  copy_propagation.hpp  dead_code_elimination.hpp  pass.hpp  simplify_cfg.hpp
include/arkoi_language/sem/: name_resolver.hpp  symbol.hpp  symbol_table.hpp  type.hpp  type_resolver.hpp
include/arkoi_language/utils/: diagnostics.hpp  driver.hpp  interference_graph.hpp  ordered_set.hpp  size.hpp  utils.hpp
include/arkoi_language/x86_64/: allocator.hpp  assembly.hpp  generator.hpp  mapper.hpp  operand.hpp  register_allocation.hpp  resolver.hpp
include/ast/: ast_printer.hpp  nodes.hpp  visitor.hpp
include/front/: parser.hpp  scanner.hpp  token.hpp
include/il/: analyses.hpp  cfg.hpp  cfg_printer.hpp  dataflow.hpp  generator.hpp  il_printer.hpp  instruction.hpp  operand.hpp
include/opt/: constant_folding.hpp  constant_propagation.hpp  dead_code_elimination.hpp  pass.hpp  simplify_cfg.hpp
include/sem/: name_resolver.hpp  symbol.hpp  symbol_table.hpp  type.hpp  type_resolver.hpp
include/utils/: driver.hpp  interference_graph.hpp  ordered_set.hpp  size.hpp
include/x86_64/: assembly.hpp  generator.hpp  mapper.hpp  operand.hpp  register_allocation.hpp
src/: main.cpp
src/arkoi_language/ast/: ast_printer.cpp
src/arkoi_language/front/: parser.cpp  scanner.cpp  token.cpp
src/arkoi_language/il/: analyses.cpp  cfg.cpp  cfg.tpp  cfg_printer.cpp  dataflow.tpp  generator.cpp  il_printer.cpp  instruction.cpp  operand.cpp  ssa.cpp
src/arkoi_language/opt/: constant_folding.cpp  constant_propagation.cpp  copy_propagation.cpp  dead_code_elimination.cpp  pass.cpp  pass.tpp  simplify_cfg.cpp
src/arkoi_language/sem/: name_resolver.cpp  name_resolver.tpp  symbol.cpp  symbol_table.cpp  symbol_table.tpp  type.cpp  type_resolver.cpp
src/arkoi_language/utils/: diagnostics.cpp  driver.cpp  interference_graph.tpp  ordered_set.tpp  size.cpp  utils.cpp
src/arkoi_language/x86_64/: allocator.cpp  assembly.cpp  generator.cpp  mapper.cpp  operand.cpp  register_allocation.cpp  resolver.cpp
src/ast/: ast_printer.cpp
src/front/: parser.cpp  scanner.cpp  token.cpp
src/il/: analyses.cpp  cfg.cpp  cfg.tpp  cfg_printer.cpp  dataflow.tpp  generator.cpp  il_printer.cpp  instruction.cpp  operand.cpp
src/opt/: constant_folding.cpp  constant_propagation.cpp  dead_code_elimination.cpp  pass.cpp  pass.tpp  simplify_cfg.cpp
src/sem/: name_resolver.cpp  name_resolver.tpp  symbol.cpp  symbol_table.tpp  type.cpp  type_resolver.cpp
src/utils/: driver.cpp  interference_graph.tpp  ordered_set.tpp  size.cpp  utils.cpp
src/x86_64/: assembly.cpp  generator.cpp  mapper.cpp  operand.cpp  register_allocation.cpp
test/: CMakeLists.txt  main.cpp
test/e2e/: test_e2e.cpp
test/il/: test_cfg.cpp
test/snapshot/: snapshot.cpp  snapshot.hpp  test_snapshot.cpp
test/snapshot/parser/: 08-all.snapshot
test/snapshot/scanner/: 01-comments.snapshot  02-keywords.snapshot  03-special.snapshot  04-indentation.snapshot  05-integer.snapshot  06-floating.snapshot  07-identifier.snapshot  08-all.snapshot
tests/: CMakeLists.txt  main.cpp
tests/arkoi_language/e2e/: test_e2e.cpp
tests/arkoi_language/il/: test_cfg.cpp
tests/arkoi_language/snapshot/: test_snapshot.cpp
tests/arkoi_language/snapshot/parser/: 08-all.ark  08-all.snapshot
tests/arkoi_language/snapshot/scanner/: 01-comments.snapshot  02-keywords.snapshot  03-special.snapshot  04-indentation.snapshot  05-integer.snapshot  06-floating.snapshot  07-identifier.snapshot  08-all.snapshot
tests/arkoi_language/utils/: test_interference.cpp  test_ordered_set.cpp
tests/snapshot/: snapshot.cpp  snapshot.hpp
